--- a/vercelhost(serverless)/backend/vercel.json
+++ b/vercelhost(serverless)/backend/vercel.json
@@ -1,6 +1,9 @@
 {
-  "buildCommand": "npm run build",
-  "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api/$1" }
+  "version": 2,
+  "builds": [
+    {
+      "src": "api/**/*.ts",
+      "use": "@vercel/node"
+    }
   ]
 }
