feat: Implement Reverse Queue architecture for previous button
Architecture Changes:
- Replace history array with reverseQueue (LIFO stack)
- Clean separation: queue (forward) + reverseQueue (backward)
- Previous button now properly navigates through played tracks

How it works:
- When track plays/skips → push to reverse queue
- Click Previous → pop from reverse queue, push current to front of queue
- Click Next → plays from queue (preserves forward navigation)

Cache Changes:
- GuestCache: history → reverseQueue
- Methods: pushToReverseQueue(), popFromReverseQueue(), getReverseQueue()
- Stack behavior: LIFO (Last In, First Out)

Player Changes:
- _playInternal: Push previous track to reverse queue
- prev(): Pop from reverse queue, push current to queue front
- Detailed console logs for debugging

Benefits:
- Simpler logic than history tracking
- No duplicate tracking issues
- Forward/backward navigation always consistent
- 100 track limit prevents memory issues

--- a/vercel-serverless/frontend/.env.production
+++ b/vercel-serverless/frontend/.env.production
@@ -1,2 +1,2 @@
 # Production Backend API URL (update after backend deployment)
-VITE_API_URL=https://your-backend.vercel.app
+VITE_API_URL=https://music-mu-lovat.vercel.app
