--- a/vercel-serverless/frontend/public/manifest.json
+++ b/vercel-serverless/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "MusicMu - YouTube Music Player",
-  "short_name": "MusicMu",
+  "name": "Cantio - YouTube Music Player",
+  "short_name": "Cantio",
   "description": "Stream music from YouTube with a beautiful interface. Offline support and app-like experience.",
   "start_url": "/",
   "display": "standalone",
@@ -13,34 +13,16 @@
   "dir": "ltr",
   "icons": [
     {
-      "src": "/pwa-192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "/pwa-512.png",
+      "src": "/icon.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
-    },
-    {
-      "src": "/pwa-192-maskable.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "maskable"
-    },
-    {
-      "src": "/pwa-512-maskable.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
     }
   ],
   "screenshots": [
     {
-      "src": "/pwa.png",
-      "sizes": "540x720",
+      "src": "/icon.png",
+      "sizes": "512x512",
       "type": "image/png"
     }
   ],
